Changelog:

08-12-2011:
Added sample charge logo.
Refactoring for charge logo support (dual binaries).
Minor changes to creatBootLogo.sh.
Ignoring output file (logo_rgb24_wvga_portrait_custom.h).
Added createBootLogo.sh script for ease of use.
Minor README modification.
Added sample "C source code header" file created with gimp (boot_logo_gimp.h) and adjusted the include path.
Renamed end_logo.h to charge_logo.h.
Create full header (boot_logo.h) with makelogo binary.
Miscellaneous cleanup.
Added changelog and .gitignore.